core/tests/snapshots/scripts__fib.snap
---
source: core/tests/scripts.rs
expression: "run(\"tests/scripts/fib.rain\").unwrap()"
---
Integer(
    RainInteger(
        12586269025,
    ),
)
