core/tests/snapshots/scripts__fn_call.snap
---
source: lang/tests/scripts.rs
expression: "run(\"tests/scripts/fn_call.rain\").unwrap()"
---
10
