core/tests/snapshots/scripts__format_string.snap
---
source: core/tests/scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (format_string), \".rain\")).unwrap()"
---
String(
    "a = 6, b = true, c = hi ${a}",
)
