core/tests/snapshots/scripts__generated_vs_local.snap
---
source: core/tests/scripts.rs
expression: "run(concat!\n(\"tests/scripts/\", stringify! (generated_vs_local), \".rain\")).unwrap()"
---
Integer(
    RainInteger(
        19,
    ),
)
