core/tests/snapshots/scripts__import.snap
---
source: core/tests/scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (import), \".rain\")).unwrap()"
---
Integer(
    RainInteger(
        16,
    ),
)
