core/tests/snapshots/scripts__internal.snap
---
source: core/tests/scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (internal), \".rain\")).unwrap()"
---
String(
    "foo7false",
)
