core/tests/snapshots/scripts__internal_import.snap
---
source: core/tests/scripts.rs
expression: "run(\"tests/scripts/internal_import.rain\").unwrap()"
---
Integer(
    RainInteger(
        16,
    ),
)
