core/tests/snapshots/scripts__internal_print.snap
---
source: lang/tests/scripts.rs
expression: "run(\"tests/scripts/internal_print.rain\").unwrap()"
---
()
