core/tests/snapshots/scripts__local_type_spec.snap
---
source: core/tests/scripts.rs
expression: "run(concat!\n(\"tests/scripts/\", stringify! (local_type_spec), \".rain\")).unwrap()"
---
Integer(
    RainInteger(
        6,
    ),
)
