core/tests/snapshots/scripts__local_var.snap
---
source: lang/tests/scripts.rs
expression: "run(\"tests/scripts/local_var.rain\").unwrap()"
---
4
